--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ _by @vavkamil_
 - Using AI to automate the process
 
 <center>
-<img src="./img/Captcha-780x470.jpg.webp" width="75%">
+<img src="./img/recaptcha_robot.png" width="75%">
 </center>
 ]
 
@@ -432,9 +432,16 @@ template: dark-center
 - Since 2012, they started adding street addresses, street names, house numbers, and even traffic signs
   - Data from Google Maps 
 
+.left-column[
 <center>
-<img src="./img/recaptcha_text.png" width="25%">
+<img src="./img/recaptcha_text.png" width="70%">
 </center>
+]
+.right-column[
+<center>
+<img src="./img/recaptcha_street.png" width="55%">
+</center>
+]
 
 ???
 
@@ -444,12 +451,12 @@ template: dark-center
 ---
 ## ~$ CAPTCHA vendors | reCaptcha
 
-- Nowadays, Google uses reCaptcha to identify objects in images, like buses, crosswalks, fire hydrants, etc.
+- Nowadays, Google uses reCaptcha to identify objects in images, like traffic lights, buses, crosswalks, fire hydrants, etc.
 
   - Google uses user inputs to improve its machine learning models, and specifically, its image recognition models
 
 <center>
-<img src="./img/recaptcha_crosswalks.webp" width="75%">
+<img src="./img/recaptcha_crosswalks.png" width="75%">
 </center>
 
 ???
@@ -466,7 +473,7 @@ template: dark-center
 - reCAPTCHA v2 (released in 2014)
   - The "I'm not a robot" checkbox was introduced
   - The images used in these challenges are often photos from Google Street View
-  - Users help train Gmachine learning (image recognition and mapping technologies)
+  - Users help train machine learning (image recognition and mapping technologies)
 
 - Invisible reCAPTCHA (released in 2017)
   - This version works in the background to determine if a user is a human or a bot without any interaction
@@ -494,7 +501,7 @@ template: dark-center
 
 .left-column[
 <center>
-<img src="./img/hcaptcha_img_1.webp" width="70%">
+<img src="./img/hcaptcha_img_1.png" width="70%">
 </center>
 ]
 .right-column[
@@ -890,7 +897,7 @@ template: dark-center
 - Can ChatGPT solve CAPTCHAs for you?
 --
 
-- NO, but it can do this:
+  - NO, but it can do this:
 --
 
 
